removed unsused packages

--- a/estatCheatsheet.tex
+++ b/estatCheatsheet.tex
@@ -2,26 +2,26 @@
 
 % region packages
 \usepackage{multicol}
-\usepackage{calc}
-\usepackage{ifthen}
+%\usepackage{calc}
+%\usepackage{ifthen}
 \usepackage[landscape]{geometry}
-\usepackage{hyperref}
-\usepackage{blindtext}
+%\usepackage{hyperref}
+%\usepackage{blindtext}
 \usepackage{xfrac}
 \usepackage{amsmath}
 \usepackage[portuguese]{babel}
 \usepackage[raggedrightboxes]{ragged2e}
-\usepackage{booktabs}
-\usepackage{array}
+%\usepackage{booktabs}
+%\usepackage{array}
 \usepackage{tabularray}
 \usepackage[none]{hyphenat}
 \usepackage{titlesec}
 \usepackage{fixmath}
-\usepackage{tikz}
-\usepackage{import}
-\usepackage{xifthen}
-\usepackage{pdfpages}
-\usepackage{transparent}
+%\usepackage{tikz}
+%\usepackage{import}
+%\usepackage{xifthen}
+%\usepackage{pdfpages}
+%\usepackage{transparent}
 \usepackage{amssymb}
 % endregion
 \geometry{top=1cm,left=1cm,right=1cm,bottom=1cm} % page margins
